@@ -5,8 +5,10 @@ gcl (2.6.6-2) unstable; urgency=low
   * libreadline5 support for Debian
   * Support for pre-compiled regexps and new texinfo format
   * Reenable run-process
+  * Push function 'accept  into lisp, use select for 'listen on socket
+    streams
 
- -- Camm Maguire <camm@enhanced.com>  Sat, 30 Apr 2005 22:46:21 +0000
+ -- Camm Maguire <camm@enhanced.com>  Sat, 30 Apr 2005 22:56:05 +0000
 
 gcl (2.6.6-1) unstable; urgency=high
 
